--- a/templates/sidebar_left.html
+++ b/templates/sidebar_left.html
@@ -1,13 +1,3 @@
 <div class="_sidebar_left">
-    <div class="_sub_menu">
-        <ul>
-            {% for link in submenu.get_menu() %}
-                <li class="">
-                    <a href="{{ link.link }}">
-                        {{ link.caption }}
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+    {% include 'submenu.html' %}
 </div>
