--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,6 +2,7 @@
     <ul>
         {% for page in site.pages %}
         <li>
+            <img src="{{ page.icon }}"></img>
             <a href="{{ page.path }}">
                 {{ page.name }}
             </a>
