--- a/templates/page.html
+++ b/templates/page.html
@@ -18,6 +18,7 @@
 {% endblock %}
 
 {% block content %}
+{{ super() }}
 <div class="_content">
     <h1>{{ page.h1 }}</h1>
     {% block page_content%}
