--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="_footer">
     <div class='_copyright'>
-        Super Simply. Copyright {{ site.system_info[year_now] }}. Denis Troenko. Все права защищены. Опубликованная на сайте информация не является публичной офертой.
+        Super Simply. Copyright 2021. Denis Troenko. Все права защищены. Опубликованная на сайте информация не является публичной офертой.
     </div>
 </div>
