--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
-{% block content %}
-<div>Super Simply - сайты создавать так просто...</div>
+{% extends 'page.html' %}
+{% block page_content %}
+<div>Super Simply - сайты создавать просто...</div>
 {% endblock %}
+
