--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,1 @@
-<div class="_footer">
-    <div class='_copyright'>
-        Super Simply. Copyright 2021. Denis Troenko. Все права защищены. Опубликованная на сайте информация не является публичной офертой.
-    </div>
-</div>
+{{ site.name }}. Copyright {{ site.info.year }}. {{ site.author }}. Все права защищены. Опубликованная на сайте информация не является публичной офертой.
