--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,6 @@
-{% extends 'page.html' %}
-{% block page_content %}
+{% extends 'home.html' %}
+
+{% block content %}
+{{ super() }}
 <div>Super Simply - сайты создавать просто...</div>
 {% endblock %}
-
