--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,6 +27,9 @@ h1,h2,h3,h4,h5,h6 {
     min-height: 50px;
     border-radius: 5px;
 }
+._breadcrumbs {
+    width: 100%;
+}
 ._sidebar_left {
     min-width: 120px;
     min-height: 30px;
