--- a/templates/page.html
+++ b/templates/page.html
@@ -1,27 +1,22 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ page.title }}
+{{ super() }}
 {% endblock %}
 
 {% block description %}
-{{ page.description }}
+{{ super() }}
 {% endblock %}
 
 {% block keywords %}
-{{ page.keywords }}
-{% endblock %}
-
-{% block head %}
 {{ super() }}
-<!-- Добавочное содержимое к head-->
 {% endblock %}
 
 {% block content %}
-{{ super() }}
 <div class="_content">
+    {% if page.image %}
+        <img src="{{ page.image  }}">
+    {% endif %}
     <h1>{{ page.h1 }}</h1>
-    {% block page_content%}
-    {% endblock %}
 </div>
 {% endblock %}
