исправления, связанные с переименование прежнего свойства Site.info в Site.server

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,1 +1,1 @@
-{{ site.name }}. Copyright {{ site.info.year }}. {{ site.author }}. Все права защищены. Опубликованная на сайте информация не является публичной офертой.
+{{ site.name }}. Copyright {{ site.server.year }}. Все права защищены. Опубликованная на сайте информация не является публичной офертой.
