--- a/templates/404.html
+++ b/templates/404.html
@@ -5,5 +5,12 @@
 {% endblock %}
 
 {% block content %}
-Что-то пошло не так...
+<h2>:( Что-то пошло не так. Перенаправляем на главную страницу...</h2>
+<p>Искомая страница не найдена. Пожалуйста, подождите, вы будете перенаправлены на главную страницу сайта.</p>
+<script type="text/javascript">
+    setTimeout('location.replace("/")',2500);
+</script>
+<noscript>
+    <meta http-equiv="refresh" content="5; url=/">
+</noscript> 
 {% endblock %}
