добавлено понятие альбомов, слайдов альбомов, организовано автоматическое заполнение альбомов слайдами из папок внутри ./static/albums

--- a/super_simply/templates/welcome.html
+++ b/super_simply/templates/welcome.html
@@ -1,6 +1,17 @@
 {% extends 'home.html' %}
 
 {% block content %}
+
 {{ super() }}
+
 <div>Super Simply - сайты создавать просто...</div>
+<br>
+
+{% for slide in site.albums[page.info.album_photos].slides %}
+    {{ slide.name }}
+    <br>
+    <img src="{{ slide.src }}">
+    <br><br>
+{% endfor %}
+
 {% endblock %}
