--- a/templates/_form_completed.html
+++ b/templates/_form_completed.html
@@ -9,6 +9,6 @@
     <h2 style="text-align: center;">Ваша заявка принята!</h2>
     <p style="text-align: center;">
         {{ session.name }}, спасибо, Ваша заявка принята.</br>
-        Мы перезвоним Вам по номеру телефона {{ session.phone }} в ближайшее рабочее время!</p>
+        Мы перезвоним Вам по номеру телефона {{ session.phone }} в ближайшее рабочее время!</p><br>
 </div>
 {% endblock %}
