Добавлено поле email

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
         {{ forms['feedback'].phone.label }}
         {{ forms['feedback'].phone(class_='form_name') }}
 
+        {{ forms['feedback'].email.label }}
+        {{ forms['feedback'].email }}
         {{ forms['feedback'].message.label }}
         {{ forms['feedback'].message(class_='form_name') }}
 
