--- a/templates/base.html
+++ b/templates/base.html
@@ -12,14 +12,17 @@
 
     <body>
         {% block content %}
-        {{ site.albums['01'].slides[0].src }}
-        <img src="{{ site.albums['01'].slides[0].src }}">
-        <br><br>
-        {% for size in site.albums['01'].slides[0].thumbnails %}
-                {{ size }} = {{ site.albums['01'].slides[0].thumbnails[size].src }}
-                <img src="{{ site.albums['01'].slides[0].thumbnails[size].src }}">
+
+        {% for slide in site.albums['01'].slides %}
+        <img src="{{ slide.src }}"><br>
+            {% for thumbnail in slide.thumbnails %}
+                <img src="{{ slide.thumbnails[thumbnail].src }}">
                 <br>
+            {% endfor %}
+            <hr><br>
         {% endfor %}
+
+
         <br><br>
         <form method="POST">
         Ваше имя: 
