add method get_slide() in Album for get slide by name

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,10 @@
             {% endfor %}
             <hr><br>
         {% endfor %}
+        
+        <br><br>
+        {{ site.albums['01'].get_slide('Андрей.jpg').thumbnails['small'].src }}<br>
+        <img src="{{ site.albums['01'].get_slide('Андрей.jpg').thumbnails['small'].src }}">
 
 
         <br><br>
